// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputError /> error props not supplied hidden message is 'None' 1`] = `
<div
  className="input-form-error-none"
>
  <span
    className="input-error-message"
  >
    None
  </span>
</div>
`;

exports[`<InputError /> error props supplied shown message is error string 1`] = `
<div
  className="input-form-error"
>
  <span
    className="input-error-message"
  >
    Test Error Message
  </span>
</div>
`;

exports[`<InputError /> noError props is not supplied, error message <div> rendered 1`] = `
<div
  className="input-form-error-none"
>
  <span
    className="input-error-message"
  >
    None
  </span>
</div>
`;

exports[`<InputError /> noError props suppied, error message <div> is not rendered 1`] = `
<div>
  <Input
    autoComplete={true}
    formGroupStyle={Object {}}
    noError={true}
    noMargin={true}
    type="text"
  />
</div>
`;

exports[`<InputError /> renders correctly 1`] = `
<div>
  <Input
    autoComplete={true}
    formGroupStyle={Object {}}
    noMargin={true}
    type="text"
  />
  <div
    className="input-form-error-none"
  >
    <span
      className="input-error-message"
    >
      None
    </span>
  </div>
</div>
`;

exports[`<InputError /> withButton props is not supplied, renders <Input /> 1`] = `
<Input
  autoComplete={true}
  formGroupStyle={Object {}}
  noMargin={true}
  type="text"
/>
`;

exports[`<InputError /> withButton props supplied, renders <InputSave /> 1`] = `
<InputSave
  autoComplete={true}
  initialValue=""
  onSave={[MockFunction]}
  withButton={true}
/>
`;
